--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -4,9 +4,7 @@ jobs:
   build_and_push:
     runs-on: ubuntu-latest
     steps:
-      - name: list dir
-        run: ls -la
       - name: clone code
         uses: actions/checkout@v2
-      - name: list dir 2
-        run: ls -la
+      - name: docker build
+        run: docker build -t Ilgar-projects/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
