--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,3 +8,5 @@ jobs:
         uses: actions/checkout@v2
       - name: docker build
         run: docker build -t Ilgar-projects/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+      - name: docker push
+        run: docker push Ilgar-projects/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID
