--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,48 +1,48 @@
-name: Build and deploy workflow
-on: [push]
-jobs:
-  build_and_push:
-    runs-on: ubuntu-latest
-    steps:
-      - name: clone code
-        uses: actions/checkout@v2
-      - name: docker build
-        run: docker build -t igorek86/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
-      - name: docker login
-        run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-      - name: docker push
-        run: docker push igorek86/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build_and_push
-    env:
-      DB_USER: ${{ secrets.DB_USER }}
-      DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-      DB_NAME: ${{ secrets.DB_NAME }}
-    steps:
-      - name: clone code
-        uses: actions/checkout@v2
-      - name: render configs
-        run: |
-          mkdir deploy
-          cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
-          cat docker-ci-config.py | envsubst > deploy/docker_config.py
-      - name: copy files to server
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          source: "deploy/docker-compose.yaml,deploy/docker_config.py"
-          target: "flask_app_ci"
-          strip_components: 1
-          key: ''
-      - name: deploy app
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          script: |
-            cd flask_app_ci
-            echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
+    name: Build and deploy workflow
+    on: [push]
+    jobs:
+      build_and_push:
+        runs-on: ubuntu-latest
+        steps:
+          - name: clone code
+            uses: actions/checkout@v2
+          - name: docker build
+            run: docker build -t igorek86/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID .
+          - name: docker login
+            run: echo ${{ secrets.DOCKER_TOKEN }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+          - name: docker push
+            run: docker push igorek86/project_start_docker:$GITHUB_REF_NAME-$GITHUB_RUN_ID
+      deploy:
+        runs-on: ubuntu-latest
+        needs: build_and_push
+        env:
+          DB_USER: ${{ secrets.DB_USER }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          DB_NAME: ${{ secrets.DB_NAME }}
+        steps:
+          - name: clone code
+            uses: actions/checkout@v2
+          - name: render configs
+            run: |
+              mkdir deploy
+              cat docker-compose-ci.yaml | envsubst > deploy/docker-compose.yaml
+              cat docker-ci-config.py | envsubst > deploy/docker_config.py
+          - name: copy files to server
+            uses: appleboy/scp-action@v0.1.7
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              source: "deploy/docker-compose.yaml,deploy/docker_config.py"
+              target: "flask_app_ci"
+              strip_components: 1
+              debug: true
+          - name: deploy app
+            uses: appleboy/ssh-action@v1.2.0
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              script: |
+                cd flask_app_ci
+                sudo docker-compose up -d
