--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -45,5 +45,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           script: |
+            if [ ! -d "flask_app_ci" ]; then
+                  mkdir flask_app_ci
+            fi
             cd flask_app_ci
             echo ${{ secrets.PASSWORD }} | sudo -S docker-compose up -d
