--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -32,11 +32,10 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "deploy/docker-compose.yaml,deploy/docker_config.py"
           target: "flask_app_ci"
           strip_components: 1
-          key: ''
       - name: deploy app
         uses: appleboy/ssh-action@v1.2.0
         with:
