--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -47,4 +47,4 @@ jobs:
               mkdir flask_app_ci
             fi
             cd flask_app_ci
-            sudo docker-compose up -d
+            docker-compose up -d
